--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@pinia/nuxt": "^0.11.3",
     "nuxt": "^4.3.0",
     "nuxt-maplibre": "^1.2.2",
+    "pmtiles": "^4.3.2",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
