feat: add deployment configuration

--- a/mise.toml
+++ b/mise.toml
@@ -1,2 +1,18 @@
 [tools]
 node = "22"
+
+[tasks.dev]
+run = 'npm run dev'
+
+[tasks.deploy]
+description = "Deploy production stack to Uncloud"
+run = '''
+if [ ! -f .env.production ]; then
+  echo ".env.production not found. Copy .env.production.example first."
+  exit 1
+fi
+set -a
+source .env.production
+set +a
+uc deploy -f compose.production.yaml
+'''
