chore: update workflows to actually also use arm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        node: [22]
+        os: [ ubuntu-24.04-arm ]
+        node: [ 22 ]
 
     steps:
       - name: Checkout
