--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pinia/colada-nuxt": "^0.3.1",
     "@pinia/nuxt": "^0.11.3",
     "nuxt": "^4.3.0",
+    "nuxt-charts": "^2.1.1",
     "nuxt-maplibre": "^1.2.2",
     "pmtiles": "^4.3.2",
     "tailwindcss": "^4.1.18"
