feat: add actual data from backend, restructure chart to actually show backend data

--- a/.env.production.example
+++ b/.env.production.example
@@ -2,3 +2,4 @@ APP_DOMAIN=app.example.com
 NITRO_HOST=0.0.0.0
 NITRO_PORT=3000
 NUXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_live_xxx
+NUXT_PUBLIC_API_BASE_URL=https://api.trailsense.daugt.com
